--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "pinia": "^3.0.3",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
